--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
         <item>Food</item>
         <item>Others</item>
     </string-array>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="title_home">Friends</string>
+    <string name="title_dashboard">Explore</string>
+    <string name="title_notifications">Notifications</string>
 </resources>
