--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,6 @@
     </string-array>
     <string name="title_activity_main2">Main2Activity</string>
     <string name="title_home">Friends</string>
-    <string name="title_dashboard">Explore</string>
+    <string name="title_explore">Explore</string>
     <string name="title_notifications">Notifications</string>
 </resources>
