messaging can now work properly with noi error message

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="short_description">Short Description</string>
     <string name="nickname">Nickname</string>
     <string name="interest">Interest</string>
+    <string name="create_activity">Create Activity</string>
 
 
 </resources>
